# swe-cli

./: .gitignore  ACE_INTEGRATION_SUMMARY.md  AGENTS.md  CRUSH.md  DEBUGGING_PROGRESS_REPORT.md  DUPLICATION_ROOT_CAUSE_ANALYSIS.md  FILES_REMOVED.md  PHASE1_PROGRESS.md  PHASE2_MULTILINE_INPUT.md  PHASE3_ANALYSIS.md  PROVIDER_MIGRATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SCROLLING_FIX.md  TEXTUAL_POC_TESTING.md  TEXTUAL_UI_DUPLICATE_FIX_NOTES.md  TRACKPAD_SCROLLING.md  WARP.md  pyproject.toml  requirements.txt  setup.py  test_async_mcp_connect.py  test_command_handlers.py  test_command_handlers_simple.py  test_console_debug.py  test_menu.py  test_runner_integration.py  test_textual_ui_clear.py
.claude/: settings.local.json
_archived_docs/: AGENTS.md  AGENT_SUMMARY_FIX.md  APPROVAL_SIGNATURE_FIX.md  BASH_EXECUTION_FIX.md  BUGFIX_REPL_CHAT.md  CHAT_INTEGRATION_COMPLETE.md  CONTEXT_ENGINEERING_COMPLETE.md  CONTEXT_ENGINEERING_DESIGN.md  CONTEXT_ENGINEERING_IMPLEMENTATION_PLAN.md  CONTEXT_ENGINEERING_INDEX.md  CONTEXT_ENGINEERING_PHASE_5_COMPLETE.md  CORE_REFACTORING_PLAN.md  CRUSH.md  DEPRECATED_FILES.md  DEPTH_ANALYSIS_COMPLETE.md  FILES_REMOVED.md  FORMATTING_FIXES_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  INIT_COMMAND_IMPLEMENTATION_PLAN.md  INTERACTIVE_APPROVAL_FLOW_COMPLETE.md  LLM_PREFIX_FIX.md  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE2_PROGRESS.md  PHASE3_ANALYSIS.md  PHASE3_COMPLETE.md  PHASE3_PROGRESS.md  PYDANTIC_AI_REFACTOR_COMPLETE.md  REFACTORING_SUMMARY.md  REPL_CHAT_ANALYSIS.md  REPL_FILES_STRATEGY.md  REPL_REFACTORING_PLAN.md  REPL_REFACTORING_SUMMARY.md  SHALLOW_IMPLEMENTATION_GAPS.md  SPINNER_FIXES_COMPLETE.md  SPLIT_SCREEN_IMPLEMENTATION.md  STYLING_MERGE_COMPLETE.md  TASK_MONITOR_COMPLETE.md  TASK_MONITOR_DESIGN.md  TASK_MONITOR_IMPLEMENTATION_STATUS.md  (+4 more)
_archived_tests/: test_action_summarizer.py  test_ansi_rendering.py  test_approval_flow.py  test_approval_improvements.py  test_approval_menu.py  test_approval_structure.py  test_approval_visual.py  test_auto_compact_indicator.py  test_autocomplete.py  test_bash_config.py  test_bash_error_display.py  test_braille_spinner.py  test_chat_app.py  test_chat_ui_renovated.py  test_codebase_indexer.py  test_compactor.py  test_context_display_fix.py  test_context_integration.py  test_context_retriever.py  test_context_token_monitor.py  test_conversation_buffer.py  test_current_state.py  test_custom_agent.py  test_dual_console.py  test_dynamic_spinner.py  test_fancy_verbs.py  test_final_ui.py  test_formatting_complete.py  test_improved_spinner_complete.py  test_new_spinner.py  test_opencli_start.py  test_output_formatters.py  test_repl_chat.py.bak  test_repl_dual_console.py  test_repl_integration.py  test_repl_start.py  test_scrolling_with_colors.py  test_spinner_animation.py  test_spinner_comparison.py  test_spinner_improvement.py  (+12 more)
docs/: ACE_ARCHITECTURE_ANALYSIS.md  ACE_INTEGRATION_COMPLETE.md  ACE_VS_COMPACTION_ANALYSIS.md  AGENT_ORCHESTRATION_REDESIGN.md  ANY_LLM_MIGRATION.md  APPROVAL_DIALOG_REDESIGN.md  AUTOCOMPLETE_ELEGANT_IMPLEMENTATION.md  AUTOCOMPLETE_ELEGANT_PLAN.md  AUTOCOMPLETE_IMPROVEMENT_PLAN.md  AUTOCOMPLETE_SYSTEM.md  BANNER_WELCOME_IMPLEMENTATION.md  BANNER_WELCOME_PLAN.md  CONTEXT_MANAGEMENT_IMPLEMENTATION.md  DEEP_AGENTS_MIGRATION_PLAN.md  DEEP_AGENTS_SUMMARY.md  INTERRUPT_FIX_SUMMARY.md  LANGCHAIN_INTEGRATION.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3_4_IMPLEMENTATION_SUMMARY.md  PLAYBOOK_SELECTION_IMPLEMENTATION_PLAN.md  PLAYBOOK_TRACKING_GUIDE.md  REACT_PATTERN.md  REFLECTION_WINDOW_IMPLEMENTATION.md  UI_IMPROVEMENTS_APPROVAL_DIALOG.md  UI_IMPROVEMENTS_COMPLETED.md  UI_IMPROVEMENTS_PHASE2_COMPLETE.md  UI_IMPROVEMENTS_PHASE3A_COMPLETE.md  UI_TRANSFORMATION_EXAMPLES.md  UI_UX_IMPROVEMENT_STRATEGY.md  UI_UX_PHASE3_STRATEGY.md  WEB_FETCH_DEEP_CRAWL.md  WEB_UI.md  WEB_UI_FIXES.md  WEB_UI_REDESIGN_COMPLETE.md  WELCOME_SCREEN_COMPLETE.md  WELCOME_SCREEN_REDESIGN_PLAN.md  (+4 more)
(+613 files in other folders)
