[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swe-cli"
version = "0.1.0"
description = "AI-powered command-line tool for accelerated development workflows"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "SWE-CLI Team"}
]
dependencies = [
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "httpx>=0.26.0",
    "requests>=2.31.0",
    "gitpython>=3.1.40",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
swecli = "swecli.cli:main"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
